<resources>
    <string name="app_name">NoteDataStorage</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="NextButton">Next</string>
    <string name="CloseButton">Close</string>
    <string name="Title">Title</string>
    <string name="BodyTitle">Body</string>
    <string name="InsertBodyHere">Insert Body Here</string>
    <string name="SaveInternalStorage">Save Internal Storage</string>
    <string name="LoadInternalStorage">Load Internal Storage</string>
    <string name="SaveSQL">SaveSql</string>
    <string name="loadsql">LOADSQL</string>
</resources>
